Addition of authorities to the user details service