@@ -1,6 +1,7 @@
 package org.xenon.knowspace.services;
 
 import lombok.AllArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
@@ -9,6 +10,7 @@ import org.springframework.stereotype.Service;
 import org.xenon.knowspace.repositories.UserRepository;
 
 import java.util.Collections;
+import java.util.List;
 
 @Service
 @AllArgsConstructor
@@ -20,7 +22,7 @@ public class CustomUserDetailsService implements UserDetailsService {
        return new User(
                user.getEmail(),
                user.getPassword(),
-               Collections.emptyList()
+               List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole()))
        );
     }
 }
